# oscal_codegen

./: Cargo.toml
src/: any_of.rs  data_type.rs  error.rs  main.rs  number_type.rs  property.rs  resolver.rs  schema.rs  schema_object.rs  schema_tree.rs  schema_type.rs  string_type.rs  tree_entry.rs  type_ref.rs
src/generate/: generate_cargo.rs  generate_mod.rs  generate_props.rs  generate_schema.rs  generate_static.rs  generate_struct.rs  mod.rs  name_space.rs
src/parse/: get_any_of.rs  get_required.rs  mod.rs  parse_array.rs  parse_object.rs  parse_props.rs  parse_schema.rs
src/util/: mod.rs  names.rs  value.rs
static/src/: error.rs  tests.rs
